--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Kirk Byers",
   "license": "MIT",
   "dependencies": {
+    "backoff": "^2.5.0",
     "kafka-node": "^2.2.3",
     "nodemon": "^1.12.0"
   }
