--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,26 @@
 version: '3'
 services:
-  kafka_exampl:
-    restart: always
+  
+  test_service:
     build: .
-    command: node_modules/.bin/nodemon --harmony --inspect=0.0.0.0:5858 app.js
+    command: npm start
     depends_on:
       - zookeeper
       - kafka
     ports:
       - 3000:3000
       - 5858:5858
-      - 9229:9229
-    environment:
-      - NODE_ENV=development
     volumes:
-      - .:/app/kafka-exampl
-      - /app/kafka-exampl/node_modules
-    # networks: 
-    #   - stack
-
+      - .:/app
+      - /app/node_modules
 
   zookeeper:
     image: zookeeper:3.4
     ports:
-      - "2181:2181"
+      - 2181:2181
     environment:
       ZOO_MY_ID: 1
-    restart: unless-stopped
-    # networks: 
-    #   - stack
+    # restart: unless-stopped
 
   kafka:
     image: ches/kafka
@@ -36,23 +28,30 @@ services:
     depends_on:
       - zookeeper  
     ports:
-      - "9092:9092"
-      - "9021:9021"
-      - "7203:7203"
+      - 9092:9092
+      - 9021:9021
+      - 7203:7203
     environment:
       - KAFKA_ADVERTISED_HOST_NAME=kafka
       - KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
       - ZOOKEEPER_IP=zookeeper
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
-      # - ./events:/scripts
-      #include these to make your kafka instance persistent
-      # - ./vol/kafka1/data:/data
-      # - ./vol/kafka1/logs:/logs
-    # entrypoint: ["/start.sh"]
-    #,"/scripts/start-kafka-shell.sh"]
-    # logging:
-    #   driver: none
-    # networks: 
-    #   - stack
+     
+    # healthcheck:
+    #   test: unset JMX_PORT && egrep -o '\[[0-9][0-9, ]*\]' (bin/zookeeper-shell.sh zookeeper:2181 <<< "ls /brokers/ids")
+    #   interval: 5s
+    #   timeout: 5s
+    #   retries: 5
+    #   # test: /bin/kafka-topics.sh --list --zookeeper zookeeper:2181
+    # # restart: unless-stopped
+    #   # - ./events:/scripts
+    #   #include these to make your kafka instance persistent
+    #   # - ./vol/kafka1/data:/data
+    #   # - ./vol/kafka1/logs:/logs
+    # # entrypoint: ["/start.sh"]
+    # #,"/scripts/start-kafka-shell.sh"]
+    # # logging:
+    # #   driver: none
+    # # networks: 
+    # #   - stack
