--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --harmony app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --harmony --inspect=0.0.0.0:5858 app.js"
   },
   "author": "Kirk Byers",
   "license": "MIT",
