--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
   
-  test_service:
+  example_service:
     build: .
-    command: npm start
+    command: npm run dev
     depends_on:
       - zookeeper
       - kafka
@@ -20,7 +20,6 @@ services:
       - 2181:2181
     environment:
       ZOO_MY_ID: 1
-    # restart: unless-stopped
 
   kafka:
     image: ches/kafka
@@ -37,21 +36,3 @@ services:
       - ZOOKEEPER_IP=zookeeper
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-     
-    # healthcheck:
-    #   test: unset JMX_PORT && egrep -o '\[[0-9][0-9, ]*\]' (bin/zookeeper-shell.sh zookeeper:2181 <<< "ls /brokers/ids")
-    #   interval: 5s
-    #   timeout: 5s
-    #   retries: 5
-    #   # test: /bin/kafka-topics.sh --list --zookeeper zookeeper:2181
-    # # restart: unless-stopped
-    #   # - ./events:/scripts
-    #   #include these to make your kafka instance persistent
-    #   # - ./vol/kafka1/data:/data
-    #   # - ./vol/kafka1/logs:/logs
-    # # entrypoint: ["/start.sh"]
-    # #,"/scripts/start-kafka-shell.sh"]
-    # # logging:
-    # #   driver: none
-    # # networks: 
-    # #   - stack
