--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --harmony --inspect=0.0.0.0:5858 app.js"
+    "start": "node --harmony app.js",
+    "dev": "node_modules/.bin/nodemon --harmony --inspect=0.0.0.0:5858 app.js"
   },
   "author": "Kirk Byers",
   "license": "MIT",
   "dependencies": {
-    "backoff": "^2.5.0",
     "kafka-node": "^2.2.3",
     "nodemon": "^1.12.0"
   }
