Add config files to .gitignore, delete ignored configs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "port": 5858,
             "address": "localhost",
             "localRoot": "${workspaceRoot}",
-            "remoteRoot": "/app/kafka-exampl",
+            "remoteRoot": "/app/example_service",
             "protocol": "inspector",
             "restart": true
         }
